scripts/nullness/annotator/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8.txt
../annotator/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/com/merriampark/Gilleland/CombinationGenerator.java:18: error: [initialization.fields.uninitialized] the constructor does not initialize fields: numLeft
	public CombinationGenerator(int n, int r) {
	       ^
../annotator/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/com/merriampark/Gilleland/CombinationGenerator.java:28: error: [method.invocation] call to getFactorial(int) not allowed on the given receiver.
		BigInteger nFact = getFactorial(n);
		                               ^
  found   : @UnderInitialization @NonNull CombinationGenerator
  required: @Initialized @NonNull CombinationGenerator
../annotator/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/com/merriampark/Gilleland/CombinationGenerator.java:29: error: [method.invocation] call to getFactorial(int) not allowed on the given receiver.
		BigInteger rFact = getFactorial(r);
		                               ^
  found   : @UnderInitialization @NonNull CombinationGenerator
  required: @Initialized @NonNull CombinationGenerator
../annotator/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/com/merriampark/Gilleland/CombinationGenerator.java:30: error: [method.invocation] call to getFactorial(int) not allowed on the given receiver.
		BigInteger nminusrFact = getFactorial(n - r);
		                                     ^
  found   : @UnderInitialization @NonNull CombinationGenerator
  required: @Initialized @NonNull CombinationGenerator
../annotator/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/com/merriampark/Gilleland/CombinationGenerator.java:32: error: [method.invocation] call to reset() not allowed on the given receiver.
		reset();
		     ^
  found   : @UnderInitialization @NonNull CombinationGenerator
  required: @Initialized @NonNull CombinationGenerator
../annotator/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/WFF.java:117: error: [argument] incompatible argument for parameter arg0 of Inference.infer.
			deduce = logic.inference().infer(new Formula[] { formula },
			                                 ^
  found   : @Initialized @Nullable Formula @Initialized @NonNull []
  required: @Initialized @NonNull Formula @Initialized @NonNull []
../annotator/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/WFF.java:118: error: [argument] incompatible argument for parameter arg1 of Inference.infer.
					formula2);
					^
  found   : @Initialized @Nullable Formula
  required: @Initialized @NonNull Formula
../annotator/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/WFF.java:232: error: [dereference.of.nullable] dereference of possibly-null reference sigma
		for (Iterator<?> i = sigma.iterator(); i.hasNext();) {
		                     ^
../annotator/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/WFF.java:235: error: [dereference.of.nullable] dereference of possibly-null reference o
			symbols.add(o.toString());
			            ^
../annotator/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/WFF.java:486: error: [argument] incompatible argument for parameter sigma of InterpretationBase constructor.
		Interpretation interpretation = new InterpretationBase(sigma, intermap);
		                                                       ^
  found   : @Initialized @Nullable Signature
  required: @Initialized @NonNull Signature
../annotator/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/WFF.java:487: error: [argument] incompatible argument for parameter F of ClassicalLogic.satisfy.
		boolean satisfied = logic.satisfy(interpretation, formula);
		                                                  ^
  found   : @Initialized @Nullable Formula
  required: @Initialized @NonNull Formula
../annotator/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/WFF.java:500: error: [dereference.of.nullable] dereference of possibly-null reference sigma
			for (Iterator<?> i = sigma.iterator(); i.hasNext();) {
			                     ^
../annotator/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/WFF.java:503: error: [dereference.of.nullable] dereference of possibly-null reference o
				symbols.add(o.toString());
				            ^
../annotator/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/defaultLogic/WorldSet.java:17: error: [method.invocation] call to addFormula(java.lang.String) not allowed on the given receiver.
		addFormula(a.e.EMPTY_FORMULA); // We assume that empty is true (this is
		          ^
  found   : @UnderInitialization(be.fnord.util.logic.defaultLogic.WorldSet.class) @NonNull WorldSet
  required: @Initialized @NonNull WorldSet
../annotator/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/AbductionReasoner.java:31: error: [method.invocation] call to _AbductionReasoner(java.lang.String,java.util.LinkedList<java.lang.String>,java.lang.String) not allowed on the given receiver.
		_AbductionReasoner(_kb, _facts, _observations);
		                  ^
  found   : @UnderInitialization(be.fnord.util.logic.AbductionReasoner.class) @NonNull AbductionReasoner
  required: @Initialized @NonNull AbductionReasoner
../annotator/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/AbductionReasoner.java:36: error: [method.invocation] call to _AbductionReasoner(java.lang.String,java.util.LinkedList<java.lang.String>,java.lang.String) not allowed on the given receiver.
		_AbductionReasoner(_kb, _facts, _observations);
		                  ^
  found   : @UnderInitialization(be.fnord.util.logic.AbductionReasoner.class) @NonNull AbductionReasoner
  required: @Initialized @NonNull AbductionReasoner
../annotator/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/DefaultReasoner.java:56: error: [initialization.fields.uninitialized] the constructor does not initialize fields: rules, world
	public DefaultReasoner() {
	       ^
../annotator/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/DefaultReasoner.java:87: error: [method.invocation] call to _DefaultReasoner(be.fnord.util.logic.defaultLogic.WorldSet,be.fnord.util.logic.defaultLogic.RuleSet) not allowed on the given receiver.
		_DefaultReasoner(myWorld, myRules);
		                ^
  found   : @UnderInitialization @NonNull DefaultReasoner
  required: @Initialized @NonNull DefaultReasoner
../annotator/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/DefaultReasoner.java:90: error: [initialization.fields.uninitialized] the constructor does not initialize fields: rules, world
	public DefaultReasoner(WorldSet myWorld, RuleSet myRules) {
	       ^
../annotator/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/DefaultReasoner.java:91: error: [method.invocation] call to _DefaultReasoner(be.fnord.util.logic.defaultLogic.WorldSet,be.fnord.util.logic.defaultLogic.RuleSet) not allowed on the given receiver.
		_DefaultReasoner(myWorld, myRules);
		                ^
  found   : @UnderInitialization @NonNull DefaultReasoner
  required: @Initialized @NonNull DefaultReasoner
20 errors
